--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -3,8 +3,17 @@
         <meta charset='UTF-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <title>Document</title>
+        <link rel="stylesheet" href="/css/app.css">
     </head>
     <body>
-        {{{body}}}
+        <div class='header'>
+            {{> header}}
+        </div>
+        <div class="container">
+            {{{body}}}
+        </div>
+        <div class="footer">
+            {{> footer}}
+        </div>
     </body>
 </html>
