--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -1,1 +1,7 @@
-<h1>Home Page</h1>
+<form method='POST'>
+    <div class='form-group'>
+        <label for='exampleInputEmail1'>Full Name</label>
+        <input name='value' type='text' class='form-control' id='exampleInputEmail1' aria-describedby='emailHelp' />
+    </div>
+    <button type='submit' class='btn btn-primary'>Submit</button>
+</form>
